release for diff platform and languages